objects/Env_Variable__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Environment Variables</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting is Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Specific_Value__c</fullName>
        <description>Value for the Specific Users Listed, which can differ from the mainstream value</description>
        <label>User-Specific Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Switch_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User-specific Switch Setting. Allows you to control a setting differently for other users</description>
        <label>User-Switch Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <description>List of Users, comma-separated</description>
        <label>Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value</description>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Environment Variable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>